# tgs-viewer

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
subprojects/: CMakeLists.txt
subprojects/glad/: CMakeLists.txt
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
